# flet-pkg

./: .gitignore  CHANGELOG.md  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: dev.yml  docs.yml  main.yml
docs/: architecture.md  cli-reference.md  contributing.md  getting-started.md  index.md  mcp-server.md
docs/api/: ai.md  analyzer.md  downloader.md  generators.md  index.md  mcp.md  models.md  parser.md  pipeline.md  scaffolder.md  type-map.md  validators.md
docs/assets/javascripts/: external-links.js
docs/assets/stylesheets/: extra.css
docs/extension-templates/: service.md  ui-control.md
flet_pkg/: downloader.py  main.py  parser.py
flet_pkg/templates/: wrapper_dart_flutter.dart.j2  wrapper_python_flet.py.j2
src/flet_pkg/: __init__.py  __main__.py  main.py
src/flet_pkg/commands/: create.py
src/flet_pkg/core/: analyzer.py  downloader.py  models.py  parser.py  pipeline.py  prompts.py  registry_checker.py  scaffolder.py  type_map.py  validators.py
src/flet_pkg/core/ai/: __init__.py  agent.py  config.py  gap_analyzer.py  models.py  prompts.py  provider.py  refiner.py
src/flet_pkg/core/generators/: __init__.py  base.py  dart_service.py  python_control.py  python_init.py  python_submodule.py  python_types.py
src/flet_pkg/mcp/: _serializers.py  server.py
src/flet_pkg/templates/service/: template.yaml
src/flet_pkg/templates/service/{{project_name}}/: LICENSE.jinja  README.md.jinja  about_pkg_flet.md.jinja  mkdocs.yml.jinja  pyproject.toml.jinja
src/flet_pkg/templates/service/{{project_name}}/docs/: api-reference.md.jinja  changelog.md.jinja  examples.md.jinja  getting-started.md.jinja  index.md.jinja
src/flet_pkg/templates/service/{{project_name}}/examples/{{package_name}}_example/: pyproject.toml.jinja
src/flet_pkg/templates/service/{{project_name}}/examples/{{package_name}}_example/src/: main.py.jinja
src/flet_pkg/templates/service/{{project_name}}/scripts/: flet_log.py  flet_log.sh
src/flet_pkg/templates/service/{{project_name}}/src/flutter/{{package_name}}/: pubspec.yaml.jinja
src/flet_pkg/templates/service/{{project_name}}/src/flutter/{{package_name}}/lib/: {{package_name}}.dart.jinja
src/flet_pkg/templates/service/{{project_name}}/src/flutter/{{package_name}}/lib/src/: extension.dart.jinja  {{control_name_snake}}_service.dart.jinja
src/flet_pkg/templates/service/{{project_name}}/src/{{package_name}}/: types.py.jinja  {{control_name_snake}}.py.jinja
src/flet_pkg/templates/service/{{project_name}}/tests/: test_{{package_name}}.py.jinja
src/flet_pkg/templates/ui_control/: template.yaml
src/flet_pkg/templates/ui_control/{{project_name}}/: README.md.jinja  about_pkg_flet.md.jinja  mkdocs.yml.jinja  pyproject.toml.jinja
src/flet_pkg/templates/ui_control/{{project_name}}/docs/: api-reference.md.jinja  examples.md.jinja  getting-started.md.jinja  index.md.jinja
src/flet_pkg/templates/ui_control/{{project_name}}/examples/{{package_name}}_example/: pyproject.toml.jinja
src/flet_pkg/templates/ui_control/{{project_name}}/examples/{{package_name}}_example/src/: main.py.jinja
src/flet_pkg/templates/ui_control/{{project_name}}/src/flutter/{{package_name}}/: pubspec.yaml.jinja
src/flet_pkg/templates/ui_control/{{project_name}}/src/flutter/{{package_name}}/lib/src/: extension.dart.jinja  {{control_name_snake}}_control.dart.jinja
src/flet_pkg/templates/ui_control/{{project_name}}/src/{{package_name}}/: __init__.py.jinja  console.py.jinja  types.py.jinja  {{control_name_snake}}.py.jinja
src/flet_pkg/templates/ui_control/{{project_name}}/tests/: test_{{package_name}}.py.jinja
src/flet_pkg/ui/: console.py  coverage.py  panels.py  tree.py
tests/: conftest.py  test_ai_refiner.py  test_analyzer.py  test_cli.py  test_downloader.py  test_generators.py  test_mcp_server.py  test_models.py  test_parser.py  test_pipeline.py  test_registry_checker.py  test_scaffolder.py  test_service_coverage.py  test_type_map.py  test_ui_control_coverage.py  test_validators.py
tests/fixtures/compound_widget/lib/: compound_widget.dart
tests/fixtures/compound_widget/lib/src/: bottom_navy_bar.dart  slidable.dart
tests/fixtures/onesignal_flutter/lib/: onesignal_flutter.dart
tests/fixtures/onesignal_flutter/lib/src/: debug.dart  notifications.dart  onesignal.dart  types.dart  user.dart
